assets/css/style.css
::-webkit-scrollbar {
    background: 0 0;
    height: 20px;
    width: 20px
}

::-webkit-scrollbar-track {
    border-radius: 0;
    box-sizing: content-box;
    width: 6px
}

::-webkit-scrollbar-thumb {
    background-clip: content-box;
    border: 7px solid transparent;
    border-radius: 20px;
    box-sizing: content-box;
    min-height: 30px;
    width: 6px
}

.results::-webkit-scrollbar,
aside::-webkit-scrollbar {
    display: none;
}

header,
aside {
    backdrop-filter: saturate(180%) blur(20px);
}

a,
.searchbox input,
.listing article,
a.read-more span,
.splitter section {
    transition: all .2s ease-in-out;
}

header,
article,
article img,
blockquote,
.hljs,
.card {
    box-shadow: 0 1px 1px #0000000d;
}

blockquote,
.hljs,
.pagination li a,
article,
.tag,
header nav ul li a,
.searchbox .results ul li,
.searchbox .results,
.searchbox input,
article img,
.card,
.changelog li img,
.changelog li a,
.splitter section {
    border-radius: 4px;
}

button,
fieldset,
html,
input,
input[type=submit],
select,
textarea {
    font: normal 1rem/1.625rem Heebo, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 10px;
    gap: 20px;
}

header .container {
    display: flex;
    align-items: stretch;
    justify-content: center;
    gap: 20px;
    min-height: 63px;
}

header nav ul {
    display: flex;
    
    justify-content: flex-end;
}

header nav,
.searchbox {display: flex;align-items: center;position: relative;}

header {

    min-height: 62px;
    position: sticky;
    top: 0;
    z-index: 2;
    border-bottom: 1px solid;
}

.brand img {
    height: 30px;
    margin: 7px 0 0 0;
}

.brand {
    display: flex;
    align-items: center;
}

header nav {
    margin-left: auto;
}

.searchbox {
    flex: 1;
}

.searchbox input {
    border: 1px solid;
    padding: 11px 20px 11px 45px;
    min-width: 300px;
    box-shadow: 0 0 0 transparent;
    width: 100%;
    font-size: 19px;
    min-width: 480px;
}

.searchbox .mdi {
    position: absolute;
    margin: 0 0 0 16px;
    font-size: 22px;
}

.searchbox .results {
    position: absolute;
    margin: 0 auto;
    z-index: 999;
    box-shadow: 0 0 0 transparent;
    border: 1px solid;
    opacity: 0;
    pointer-events: none;
    overflow-y: auto;
    scrollbar-width: none;
    left: 0;
    right: 0;
    top: 58px;
    max-height: 320px;
}

.searchbox input:focus,
.searchbox.show input {
    outline: none;
    box-shadow: 0 1px 1px #0000001a;
    }

.searchbox.show .results {
    pointer-events: initial;
    opacity: 1;
}

.searchbox .results ul {
    padding: 10px 5px;
}

.searchbox .results ul li {
    padding: 10px;
}

header nav ul li a {
    color: #000;
    font-weight: 500;
    padding: 3px 13px;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    gap: 4px;
}

header nav ul li {
    position: relative;
    top: 2px;
}

article {
    padding: 20px 10px;
}

article h2 {
    font-size: 1.375rem;
    line-height: 1.46364;
    letter-spacing: -.02rem;
}

article .metainfo {
    display: block;
    font-size: 14px;
}

article .metainfo a {
    font-weight: 500;
}

article .metainfo em {
    font-style: normal;
}

article p {
    font-size: 1.1875rem;
    line-height: 1.99rem;
    margin: 1.5625rem 0;
}

article .tags {
    display: flex;
    gap: 10px;
}

.tag {
    padding: 0 5px;
    background-repeat: no-repeat;
    background-position: 7px;
    display: flex;
    align-items: center;
    align-content: center;
}

a.read-more {
    float: right;
    display: flex;
    position: relative;
}

article {
    border: 1px solid;
    padding: 20px 20px 70px;
    position: relative;
}

.listing {
    display: grid;
    grid-template-columns: auto auto;
    gap: 10px;
    margin: 5px auto;
}

.listing {
    display: flex;
    gap: 20px;
    flex-direction: column;
    padding: 20px;
    margin: 0;
    border-top: 1px solid;
    max-width: initial;
}

.listing article:first-of-type {
    grid-column: 1 / span 2;
}

.listing article:first-of-type h2 {
    font-size: 2.1rem;
}

.reading-time {
    font-size: .9375rem;
    margin: 0 0 0 0;
    position: relative;
    top: 23px;
}

.listing article:not(:first-of-type) a.read-more span:not(.mdi) {
    opacity: 0;
}

.listing article:hover a.read-more span:not(.mdi) {
    opacity: 1;
}

.sitemap {
    display: flex;
    gap: 10px;
}

footer {
    border-top: 1px solid;
    padding: 30px 20px;
    display: flex;
    justify-content: space-between;
    gap: 20px;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

.sitemap .small {
    font-size: .75rem;
    margin: 0 0 .3125rem;
}

.sitemap .spacer {
    height: 20px;
}

.sitemap li:not(.small)>a {
    display: flex;
    align-items: center;
    gap: 10px;
}

.sitemap a {
    font-size: .875rem;
}

.sitemap li li {
    padding: 4px;
}

.sitemap li .mdi {
    font-size: 16px;
}

.pagination {
    display: flex;
    justify-content: flex-end;
    padding: 20px 0;
}

.pagination li a {
    padding: 4px 12px;
    background-color: transparent;
    gap: 10px;
}

.container.article {
    display: grid;
    grid-template-columns: 230px minmax(auto, 1fr);
    align-items: start;
    width: 100%;
    gap: 20px;
}

aside b,
aside span {
    text-transform: uppercase;
    font-weight: 500;
    font-size: 12px;
    margin: 0 0 0 4px;
    display: flex;
    gap: 5px;
}

aside {
    font-size: 15px;
    padding-left: 3px;
    margin: 54px 0 20px 0;
}

aside>ul>li>a {
    border-left: 2px solid transparent;
    padding: 0 0 0 10px;
    margin: 0 0 0 0;
}

aside>ul>li>a.H3::before {
    content: "- ";
}

aside ul {
    display: flex;
    flex-direction: column;
    gap: 8px;
    margin: 10px 0;
}

aside>ul>li>a.H3 {
    font-weight: 400;
}

aside>ul>li>a {
    font-weight: 500;
}

.article aside {
    grid-column: 1/2;
    grid-row: 1;
    position: sticky;
    top: 80px;
    bottom: 0;
    overflow-y: scroll;
    max-height: calc(100vh - 90px);
}

.article article {
    grid-column: 2 / 4;
    width: 100%;
    padding-bottom: 10px;
}

aside>ul>li>a.active {
    font-weight: 500;
    font-size: 18px;
}

.article article h1 {
    font-size: 2.3em;
    margin: 0 0 .15rem;
    line-height: 3rem;
    font-weight: 500;
}

aside .reading-time {
    position: initial;
    font-size: 12px;
}

.article article .metainfo {
    margin: 0 0 20px 0;
}

.content p,
.content ul li {
    font-size: 1.1em;
    font-weight: 400;
    letter-spacing: .0531rem;
    line-height: 1.9em;
    margin: 0 0 1.5625rem;
    word-break: break-word;
}

.content {
    margin: 20px 0;
}

.content h2 {
    font-size: 1.75rem;
    line-height: 2.25rem;
}

.content h2,
.content h3,
.content h4 {
    margin: 2.1875rem 0 0.8rem;
    font-weight: 500;
}

.hljs {
    font-size: .95em;
    padding: 10px 20px;
    border: 1px solid;
    overflow: auto;
}

.content :not(pre)>code {
    font-weight: 600;
    border-radius: .1875rem;
    font-size: .975rem;
    padding: .125rem .3125rem;
}

blockquote {
    margin: 0;
    padding: 19px 35px;
    font-style: italic;
    font-size: 17px;
    font-family: 'Roboto Slab', serif;
}

aside b+.mdi {
    display: none;
}

.listing article .reading-time {
    position: absolute;
    bottom: 10px;
    left: 20px;
    top: initial;
}

.listing article .read-more {
    position: absolute;
    bottom: 10px;
    right: 10px;
}

.content ul li {
    list-style: disc;
    margin: 0;
}

.content ul {
    margin: 0 0 30px 20px;
}

.content ul li {
    list-style: disc;
    margin: 0;
}

.content ul {
    margin: 0 0 30px 20px;
}

.content table thead {
    border-bottom: 1px solid;
}

.content table {
    border-collapse: collapse;
    margin: 0 0 20px 0;
}

.content th,
.content td {
    padding: 2px 6px;
}

.searchbox.show input {
    width: 100%;
}

.card {
    grid-column: 2/4;
    border: 1px solid;
    padding: 15px 20px;
}

.card b {
    font-weight: 500;
    font-size: 18px;
    display: flex;
    margin: 0 0 10px 0;
    align-items: center;
    gap: 7px;
}

.changelog li img {
    width: 18px;
}

.changelog li a {
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 13px;
    background-color: transparent;
    padding: 0 5px;
}

.card ul {
    margin: 0 -4px;
}

.splitter {
    display: flex;
    justify-content: space-between;
    gap: 20px;
}

.splitter section {
    background-color: transparent;
    padding: 10px;
}

.card .splitter {
    margin: 0 -10px;
}

.splitter section b {
    margin: 0 0 3px 0;
    font-size: 16px;
}

.splitter section b .mdi {
    font-size: 22px;
}

.splitter section p {
    font-size: 16px;
}

hr {
    border: 0;
    border-bottom: 1px solid;
}

.reading-time .mdi {
    filter: invert(0.6) saturate(6);
}

.content blockquote p {
    margin: 0 0 10px 0;
    line-height: 1.2em;
}

nav.top-nav ul {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 15px;
}

nav.top-nav .mdi {
    font-size: 16px;
}

nav.top-nav li {
    font-size: 14px;
}

nav.top-nav li a {
    display: flex;
    align-items: center;
    gap: 5px;
}

nav.top-nav {
    padding: 10px 30px;
    display: flex;
    justify-content: space-between;
}

.search-home {
    display: flex;
    position: fixed;
    top: 45px;
    left: 0;
    bottom: 200px;
    right: 0;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    max-width: 760px;
    gap: 15px;
    padding: 10px;
}

.search-home .brand img {
    height: 50px;
}

footer .small a {
    font-size: 10px;
}

footer .small {
    font-size: 11px;
}

footer li {
    line-height: 18px;
}

.searchbox .results ul li b {
    font-weight: 300;
}

.listing h3 {
    font-weight: 400;
    font-size: 20px;
    margin: 0 0 5px 0;
}

.listing p {
    line-height: 1.58;
    font-size: 14px;
}

.search-bar {
    display: flex;
    max-width: 600px;
    padding: 0;
    justify-content: flex-start;
    margin: 0;
    gap: 20px;
}

.listing-content .result {
    max-width: 600px;
    padding: 10px;
    border-radius: 8px;
}

.listing-content {
    display: flex;
    gap: 10px;
    flex-direction: column;
    margin: -10px;
}

.search-bar .searchbox input {
    padding: 7px 16px 7px 41px;
}

.search-bar .searchbox .mdi {
    margin: 0 0 0 11px;
    font-size: 20px;
}

body.post footer {
    position: initial;
}

